# deploydocus

./: .firebaserc  .flake8  .gitignore  COPYRIGHT.md  LICENSE.md  Makefile  README.md  firebase.json  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
docs/: example_seq.puml  extras.txt
docs/project_site/: Makefile  mkdocs.yml
docs/project_site/docs/: index.md
docs/source/: conf.py  index.rst
docs/source/apidoc/: deploydocus.installer.errors.rst  deploydocus.installer.helm3.helm_shell.rst  deploydocus.installer.helm3.rst  deploydocus.installer.installer.rst  deploydocus.installer.rst  deploydocus.installer.utils.rst  deploydocus.logging.configure.rst  deploydocus.logging.rst  deploydocus.package.pkg.rst  deploydocus.package.rst  deploydocus.rst  deploydocus.settings.rst  deploydocus.types.rst  deploydocus.utils.rst  modules.rst
extras/autogen/: autogen.py
extras/example_app_pkg/: Dockerfile  __init__.py  basichttp.env  basichttp.py  build-image.sh  default.py  settings.py  uninstall_scripts.sh
extras/misc/: autogen.py  install_test.py  release.json  uninstall_scripts.sh  uninstall_test.py  uninstall_test_with_failure.py
extras/simple_example_json_server/: Dockerfile  build-image.sh
extras/simple_example_json_server/example_app_pkg/: default.py
extras/simple_example_json_server/example_apps_helmchart/: Chart.yaml  values.yaml
extras/simple_example_json_server/example_apps_helmchart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
extras/simple_example_json_server/example_apps_helmchart/templates/tests/: test-connection.yaml
extras/simple_example_json_server/simplejsonserver/: basichttp.py
k8s/: rendered.yaml
k8s/defaultchart/: Chart.yaml  values.yaml
k8s/defaultchart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
k8s/defaultchart/templates/tests/: test-connection.yaml
scripts/: dmypy.sh
src/deploydocus/: __init__.py  __main__.py  installer.py  settings.py  types.py  utils.py
src/deploydocus/appstate/: __init__.py  binutils.py
src/deploydocus/appstate/helm3/: __init__.py  helm.py  helm_shell.py
src/deploydocus/appstate/kustomize/: __init__.py  kustomize.py
src/deploydocus/appstate/sources/: __init__.py
src/deploydocus/appstate/sources/git/: __init__.py  git.py
src/deploydocus/chart/: default.py
src/deploydocus/cli/: main.py
src/deploydocus/installer/: __init__.py  errors.py  installer.py  pkg.py  settings.py  types.py  utils.py
src/deploydocus/installer/helm3/: __init__.py  helm_shell.py
src/deploydocus/installer/kustomize/: kustomize.py
src/deploydocus/logging/: __init__.py  configure.py
src/deploydocus/package/: __init__.py  errors.py  installer.py  pkg.py  types.py  utils.py
src/examples/: autogen.py  example_chart.py
tests/: README.md
tests/integration/: conftest.py  helm_pull_git_clone_test.py  test_discover_installed.py  test_helm_pull_git_clone.py  test_install.py  test_kustomize.py  test_uninstall.py  test_uninstall_with_failure.py
tests/integration/example_app_pkg/: __init__.py  default.py  pkg.json  settings.py
tests/unit/: conftest.py  test_helmchart.py
tests/unit/cli/: test_cli.py
