[tool.poetry]
name = "deploydocus"
version = "0.1.0-alpha"
description = ""
authors = ["Partho Bhowmick <partho.bhowmick@icloud.com>"]
readme = "README.md"
packages = [{include = "deploydocus", from = "src"}]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = "^3.12"
kubernetes = ">=27 <31"
pydantic-settings = "^2.3"
pyyaml = {extras = ["libyaml"], version = "^6.0"}
types-pyyaml = "^6.0"
plumbum = "^1.8"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
pytest = "^8.2.2"
mypy = "^1.10"
isort = "^5.13"
flake8 = "^7.1"
cython = "^3.0"
wheel = "^0.43"
camel-converter = "^3.1"
black = "^24.4"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3"
mkdocs = "^1.6"
mkdocs-material = "^9.5.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
