[tool.poetry]
name = "deploydocus"
version = "0.0.1a1"
description = "A library and CLI to install/uninstall Kubernetes applications to clusters."
authors = ["Partho Bhowmick <partho.bhowmick@icloud.com>"]
readme = "README.md"
packages = [{include = "deploydocus", from = "src"}]
license = "AGPL-3.0-or-later"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[tool.poetry.dependencies]
python = "^3.12"
kubernetes = ">=27 <31"
pydantic-settings = "^2.3"
pyyaml = {extras = ["libyaml"], version = "^6.0.2"}
types-pyyaml = "^6.0"
plumbum = "^1.8"
pydantic = "^2.8"
typer = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29"
pytest = "^8.3"
mypy = "^1.13"
isort = "^5.13"
flake8 = "^7.1"
cython = "^3.0"
wheel = "^0.44.0"
camel-converter = "^3.1"
black = "^24.10"
flake8-pydantic = "^0.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1"
mkdocs = "^1.6"
mkdocs-material = "^9.5"

[tool.poetry.scripts]
deploydocus = "deploydocus.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312", "py311"]

[tool.isort]
profile = "black"

